--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clothe-ai:-smart-wardrobe",
+  "name": "clothe-ai-smart-wardrobe",
   "private": true,
   "version": "0.0.0",
   "type": "module",
